[package]
name = "minecraft-launcher"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
reqwest = { version = "0.12.2", features = [
    "rustls-tls",
    "json",
], default-features = false }
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
